--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 <body>
     <div>
         <input type="text" placeholder="Enter City Name">
-        <button>Search</button>
+        <button id="SearchButton">Search</button>
     </div>
+    <script>
+        let searchbutton = document.getElementById('SearchButton')
+        searchbutton.addEventListener('click', () => {
+            alert("Hello Saurav")
+        })
+    </script>
 </body>
 </html>
